# dtm

./: README.md  noxfile.py  pyproject.toml  setup.py
.github/: dependabot.yaml
.github/workflows/: build.yml  publish.yml
dtm/: main.py
tests/: conftest.py  test_execute.py  test_multiprocess_functions.py  test_subprocess.py  test_utils.py
