[tool.poetry]
name = "dtm"
version = "1.0.0"
description = ""
authors = ["tovop <pev@sevassp.com>",
           "EBGlom <ebg@sevassp.com>"]

[tool.poetry.dependencies]
python = ">=3.9.1, < 4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
nox = "^2024.4.15"
flake8 = "^7.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
